# OpenGUIRobot

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: CLI.md  QUICKSTART.md
docs/kb/L0/: glossary.md
docs/roadmap/: README.md
docs/roadmap/v0.1/: PRD.md  TECH-SPEC.md
docs/roadmap/v0.2/: PRD.md  TECH-SPEC.md
docs/roadmap/v0.3/: PRD.md  TECH-SPEC.md
docs/roadmap/v0.4/: PRD.md  TECH-SPEC.md
docs/roadmap/v1.0/: PRD.md  TECH-SPEC.md
docs/roadmap/v1.x/: PRD.md  TECH-SPEC.md
openguirobot/: config.py  runtime.py
openguirobot/action/: ast_guard.py  codegen.py  compiler.py  sandbox.py
openguirobot/action/sandbox_profiles/: macos_default.sb
openguirobot/action/templates/: codegen_step.j2  plan.j2  solidify.py.j2
openguirobot/cases/: loader.py
openguirobot/cli/: main.py
openguirobot/cli/commands/: cases.py  doctor.py  explore.py  kb.py  replay.py
openguirobot/driver/: android.py  base.py  ios.py
openguirobot/jobs/: __init__.py  worker.py
openguirobot/llm/: anthropic_adapter.py  base.py  openai_adapter.py
openguirobot/memory/: __init__.py  kb.py
openguirobot/obs/: cost.py  evidence.py
openguirobot/skill/: assertor.py  healer.py  image_diff.py  locator.py
openguirobot/testing/: __init__.py  pytest_plugin.py
openguirobot/vision/: base.py  gpt4o.py  qwen_vl_dashscope.py
tests/: conftest.py
tests/cases/e_commerce/: add_to_cart.case.yaml
tests/unit/: test_assertor.py  test_ast_guard.py  test_case_loader.py  test_codegen.py  test_compiler.py  test_config.py  test_cost.py  test_driver_base.py  test_evidence.py  test_healer.py  test_image_diff.py  test_kb.py  test_llm_adapters.py  test_locator.py  test_pytest_plugin.py  test_runtime.py  test_sandbox.py  test_vision_adapters.py  test_worker.py
