[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "openguirobot"
version = "0.2.0"
description = "LLM-powered GUI automation test platform for iOS, Android, and Web"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenGUIRobot Contributors" }]

dependencies = [
    # Driver
    "Appium-Python-Client>=4.0",
    "adbutils>=2.4",
    # Core
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "tenacity>=8.2",
    "black>=24.0",
    "PyYAML>=6.0",
    "click>=8.1",
    "rich>=13.7",
    # LLM
    "openai>=1.30",
    "anthropic>=0.26",
    "httpx>=0.27",
    # Vision
    "dashscope>=1.18",
    "Pillow>=10.0",
    # Assertor (OCR)
    "rapidocr-onnxruntime>=1.3",
    # v0.2: image diff (phash)
    "imagehash>=4.3",
    # Observability
    "structlog>=24.1",
    "psutil>=5.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
]
ios = [
    "pymobiledevice3>=3.0",
]
jobs = [
    "arq>=0.25",
]
vision-extra = [
    "scikit-image>=0.22",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-Pillow",
]

[project.scripts]
ogr = "openguirobot.cli.main:app"

[project.entry-points."openguirobot.drivers"]
android = "openguirobot.driver.android:AndroidDriver"
ios     = "openguirobot.driver.ios:IOSDriver"

[project.entry-points."pytest11"]
openguirobot = "openguirobot.testing.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["openguirobot"]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["openguirobot"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version      = "3.11"
strict              = true
ignore_missing_imports = false
plugins             = ["pydantic.mypy"]
exclude             = ["tests/generated/"]

[[tool.mypy.overrides]]
module = ["appium.*", "adbutils.*", "dashscope.*", "rapidocr_onnxruntime.*"]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "--tb=short -q"
markers = [
    "integration: requires real device/emulator",
    "slow: tests taking >5s",
]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["openguirobot"]
omit   = [
    "tests/*",
    # Require real devices / Appium — covered by integration tests only
    "openguirobot/driver/android.py",
    "openguirobot/driver/ios.py",
    # Require real CLI invocation — covered by integration tests only
    "openguirobot/cli/*",
]

[tool.coverage.report]
fail_under   = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
